Sponsor section: Badge positioned correctly on mobile.

--- a/app/scss/modules/_sponsor-section.scss
+++ b/app/scss/modules/_sponsor-section.scss
@@ -165,6 +165,14 @@
 				width: 115px;
 				height: 115px;
 			}
+
+			@media screen and (max-width: 767px) {
+				left: auto;
+				right: 30px;
+				bottom: auto;
+				top: 0;
+				@include translate(0,-50%);
+			}
 		}
 	}
 
